--- a/Anime.css
+++ b/Anime.css
@@ -325,7 +325,7 @@ simple rule of add = #more {background-image: url();}
 #more5781 {background-image: url(http://cdn.myanimelist.net/images/anime/2/20345.jpg);}
 #more4901 {background-image: url(http://cdn.myanimelist.net/images/anime/6/56043.jpg);}
 #more2004 {background-image: url(http://cdn.myanimelist.net/images/anime/3/14525.jpg);}
-#more185 {background-image: url(http://cdn.myanimelist.net/images/anime/13/6801.jpg);}
+#more185 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/6801.jpg);}
 #more153 {background-image: url(http://cdn.myanimelist.net/images/anime/6/50859.jpg);}
 #more25681 {background-image: url(http://cdn.myanimelist.net/images/anime/8/69187.jpg);}
 #more25161 {background-image: url(http://cdn.myanimelist.net/images/anime/3/64755.jpg);}
@@ -1554,7 +1554,7 @@ simple rule of add = #more {background-image: url();}
 #more25159 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/64413.jpg);}
 #more25157 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/67795.jpg);}
 #more23421 {background-image: url(http://cdn.myanimelist.net/images/anime/3/62309.jpg);}
-#more19291 {background-image: url(http://cdn.myanimelist.net/images/anime/12/54549.jpg);}
+#more19291 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/54549.jpg);}
 #more18391 {background-image: url(http://cdn.myanimelist.net/images/anime/3/49225.jpg);}
 #more16592 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/54661.jpg);}
 #more15863 {background-image: url(http://cdn.myanimelist.net/images/anime/10/44594.jpg);}
@@ -2245,7 +2245,7 @@ simple rule of add = #more {background-image: url();}
 #more12673 {background-image: url(http://cdn.myanimelist.net/images/anime/3/35569.jpg);}
 #more10948 {background-image: url(http://cdn.myanimelist.net/images/anime/5/30204.jpg);}
 #more9055 {background-image: url(http://cdn.myanimelist.net/images/anime/4/28362.jpg);}
-#more9041 {background-image: url(http://cdn.myanimelist.net/images/anime/10/26111.jpg);}
+#more9041 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/74045.jpg);}
 #more8917 {background-image: url(http://cdn.myanimelist.net/images/anime/13/36247.jpg);}
 #more7053 {background-image: url(http://cdn.myanimelist.net/images/anime/2/37371.jpg);}
 #more6460 {background-image: url(http://cdn.myanimelist.net/images/anime/3/22021.jpg);}
@@ -2417,7 +2417,7 @@ simple rule of add = #more {background-image: url();}
 #more12137 {background-image: url(http://cdn.myanimelist.net/images/anime/8/34249.jpg);}
 #more11761 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/34849.jpg);}
 #more11021 {background-image: url(http://cdn.myanimelist.net/images/anime/3/44462.jpg);}
-#more10794 {background-image: url(http://cdn.myanimelist.net/images/anime/4/56161.jpg);}
+#more10794 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/33627.jpg);}
 #more10683 {background-image: url(http://cdn.myanimelist.net/images/anime/3/29456.jpg);}
 #more10419 {background-image: url(http://cdn.myanimelist.net/images/anime/2/28643.jpg);}
 #more7654 {background-image: url(http://cdn.myanimelist.net/images/anime/6/18435.jpg);}
@@ -2493,7 +2493,7 @@ simple rule of add = #more {background-image: url();}
 #more247 {background-image: url(http://cdn.myanimelist.net/images/anime/7/7227.jpg);}
 #more169 {background-image: url(http://cdn.myanimelist.net/images/anime/12/20669.jpg);}
 #more23153 {background-image: url(http://cdn.myanimelist.net/images/anime/2/70353.jpg);}
-#more21653 {background-image: url(http://cdn.myanimelist.net/images/anime/9/67545.jpg);}
+#more21653 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/67545.jpg);}
 #more20871 {background-image: url(http://cdn.myanimelist.net/images/anime/2/55695.jpg);}
 #more20359 {background-image: url(http://cdn.myanimelist.net/images/anime/8/58865.jpg);}
 #more17115 {background-image: url(http://cdn.myanimelist.net/images/anime/7/45749.jpg);}
@@ -2717,7 +2717,7 @@ simple rule of add = #more {background-image: url();}
 #more23479 {background-image: url(http://cdn.myanimelist.net/images/anime/11/62095.jpg);}
 #more23233 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/67627.jpg);}
 #more20141 {background-image: url(http://cdn.myanimelist.net/images/anime/5/56447.jpg);}
-#more20045 {background-image: url(http://cdn.myanimelist.net/images/anime/7/56159.jpg);}
+#more20045 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/56159.jpg);}
 #more18745 {background-image: url(http://cdn.myanimelist.net/images/anime/13/54451.jpg);}
 #more18677 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/54389.jpg);}
 #more15807 {background-image: url(http://cdn.myanimelist.net/images/anime/10/43771.jpg);}
@@ -2998,7 +2998,7 @@ simple rule of add = #more {background-image: url();}
 #more12959 {background-image: url(http://cdn.myanimelist.net/images/anime/13/44696.jpg);}
 #more12483 {background-image: url(http://cdn.myanimelist.net/images/anime/2/35059.jpg);}
 #more11227 {background-image: url(http://cdn.myanimelist.net/images/anime/7/50439.jpg);}
-#more11161 {background-image: url(http://cdn.myanimelist.net/images/anime/10/30839.jpg);}
+#more11161 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/30839.jpg);}
 #more10827 {background-image: url(http://cdn.myanimelist.net/images/anime/2/29892.jpg);}
 #more10604 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/29138l.jpg);}
 #more10106 {background-image: url(http://cdn.myanimelist.net/images/anime/10/36317.jpg);}
@@ -3664,7 +3664,7 @@ simple rule of add = #more {background-image: url();}
 #more23247 {background-image: url(http://cdn.myanimelist.net/images/anime/12/60127.jpg);}
 #more21177 {background-image: url(http://cdn.myanimelist.net/images/anime/10/57803.jpg);}
 #more20379 {background-image: url(http://cdn.myanimelist.net/images/anime/6/54137.jpg);}
-#more18247 {background-image: url(http://cdn.myanimelist.net/images/anime/12/49359.jpg);}
+#more18247 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/49359.jpg);}
 #more17419 {background-image: url(http://cdn.myanimelist.net/images/anime/5/46573.jpg);}
 #more17357 {background-image: url(http://cdn.myanimelist.net/images/anime/11/60079.jpg);}
 #more16419 {background-image: url(http://cdn.myanimelist.net/images/anime/13/46363.jpg);}
@@ -6055,7 +6055,7 @@ simple rule of add = #more {background-image: url();}
 #more1099 {background-image: url(http://cdn.myanimelist.net/images/anime/7/24449.jpg);}
 #more28631 {background-image: url(http://cdn.myanimelist.net/images/anime/13/69335.jpg);}
 #more26059 {background-image: url(http://cdn.myanimelist.net/images/anime/8/65911.jpg);}
-#more24699 {background-image: url(http://cdn.myanimelist.net/images/anime/12/67801.jpg);}
+#more24699 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/67801.jpg);}
 #more23037 {background-image: url(http://cdn.myanimelist.net/images/anime/11/62557.jpg);}
 #more22215 {background-image: url(http://cdn.myanimelist.net/images/anime/12/60581.jpg);}
 #more19187 {background-image: url(http://cdn.myanimelist.net/images/anime/10/52123.jpg);}
@@ -7395,7 +7395,7 @@ simple rule of add = #more {background-image: url();}
 #more4966 {background-image: url(http://cdn.myanimelist.net/images/anime/3/68385.jpg);}
 #more4266 {background-image: url(http://cdn.myanimelist.net/images/anime/7/24039.jpg);}
 #more28647 {background-image: url(http://cdn.myanimelist.net/images/anime/11/69161.jpg);}
-#more28531 {background-image: url(http://cdn.myanimelist.net/images/anime/3/70135.jpg);}
+#more28531 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/70135.jpg);}
 #more19213 {background-image: url(http://cdn.myanimelist.net/images/anime/7/51513.jpg);}
 #more17151 {background-image: url(http://cdn.myanimelist.net/images/anime/3/71910.jpg);}
 #more10406 {background-image: url(http://cdn.myanimelist.net/images/anime/9/28590.jpg);}
@@ -10659,7 +10659,7 @@ simple rule of add = #more {background-image: url();}
 #more33036 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/82537.webp);}
 #more33018 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/87984.jpg);}
 #more34019 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/84461.jpg);}
-#more33352 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/86269.jpg);}
+#more33352 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/89551.jpg);}
 #more33161 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/84052.jpg);}
 #more34176 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/85224.jpg);}
 #more32901 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/86468.jpg);}
@@ -10798,3 +10798,19 @@ simple rule of add = #more {background-image: url();}
 #more36038 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/87463.jpg);}
 #more35079 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/87235.jpg);}
 #more36882 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/89237.jpg);}
+#more36470 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/88837.jpg);}
+#more31964 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/78745.jpg);}
+#more33486 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/85221.jpg);}
+#more35262 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/84951.jpg);}
+#more36949 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/89482.jpg);}
+#more35180 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/88469.jpg);}
+#more32323 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/78011.jpg);}
+#more35557 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/88293.jpg);}
+#more34451 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/88282.jpg);}
+#more {background-image: url();}
+#more {background-image: url();}
+#more {background-image: url();}
+#more {background-image: url();}
+#more {background-image: url();}
+#more {background-image: url();}
+#more {background-image: url();}
