--- a/Anime.css
+++ b/Anime.css
@@ -1968,7 +1968,7 @@ simple rule of add = #more {background-image: url();}
 #more3247 {background-image: url(http://cdn.myanimelist.net/images/anime/10/10498.jpg);}
 #more3210 {background-image: url(http://cdn.myanimelist.net/images/anime/9/27506.jpg);}
 #more3067 {background-image: url(http://cdn.myanimelist.net/images/anime/2/4603.jpg);}
-#more2847 {background-image: url(http://cdn.myanimelist.net/images/anime/4/20407.jpg);}
+#more2847 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/20407.jpg);}
 #more2745 {background-image: url(http://cdn.myanimelist.net/images/anime/6/21281.jpg);}
 #more2583 {background-image: url(http://cdn.myanimelist.net/images/anime/8/24536.jpg);}
 #more1847 {background-image: url(http://cdn.myanimelist.net/images/anime/8/34619.jpg);}
@@ -1979,7 +1979,7 @@ simple rule of add = #more {background-image: url();}
 #more1417 {background-image: url(http://cdn.myanimelist.net/images/anime/2/15005.jpg);}
 #more1313 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/20360.jpg);}
 #more1140 {background-image: url(http://cdn.myanimelist.net/images/anime/7/32011.jpg);}
-#more384 {background-image: url(http://cdn.myanimelist.net/images/anime/13/5998.jpg);}
+#more384 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/5998.jpg);}
 #more189 {background-image: url(http://cdn.myanimelist.net/images/anime/1/189.jpg);}
 #more29583 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/71175.jpg);}
 #more17717 {background-image: url(http://cdn.myanimelist.net/images/anime/6/47409.jpg);}
@@ -2635,7 +2635,7 @@ simple rule of add = #more {background-image: url();}
 #more5342 {background-image: url(http://cdn.myanimelist.net/images/anime/7/17071.jpg);}
 #more5315 {background-image: url(http://cdn.myanimelist.net/images/anime/12/37261.jpg);}
 #more4765 {background-image: url(http://cdn.myanimelist.net/images/anime/12/12641.jpg);}
-#more4026 {background-image: url(http://cdn.myanimelist.net/images/anime/3/21316.jpg);}
+#more4026 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/21316.jpg);}
 #more3653 {background-image: url(http://cdn.myanimelist.net/images/anime/2/50375.jpg);}
 #more2678 {background-image: url(http://cdn.myanimelist.net/images/anime/12/72423.jpg);}
 #more2404 {background-image: url(http://cdn.myanimelist.net/images/anime/2/21539.jpg);}
@@ -3040,7 +3040,7 @@ simple rule of add = #more {background-image: url();}
 #more13053 {background-image: url(http://cdn.myanimelist.net/images/anime/7/36659.jpg);}
 #more12997 {background-image: url(http://cdn.myanimelist.net/images/anime/11/36485.jpg);}
 #more12035 {background-image: url(http://cdn.myanimelist.net/images/anime/13/33977.jpg);}
-#more10740 {background-image: url(http://cdn.myanimelist.net/images/anime/9/29621.jpg);}
+#more10740 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/29621.jpg);}
 #more6890 {background-image: url(http://cdn.myanimelist.net/images/anime/11/15994.jpg);}
 #more5895 {background-image: url(http://cdn.myanimelist.net/images/anime/6/68841.jpg);}
 #more5891 {background-image: url(http://cdn.myanimelist.net/images/anime/5/46565.jpg);}
