--- a/Manga.css
+++ b/Manga.css
@@ -143,7 +143,7 @@ Manga Tumbnail
 #more149 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/1/57043.jpg);}
 #more348 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/3/161681.jpg);}
 #more1412 {background-image: url(http://cdn.myanimelist.net/images/manga/2/11112.jpg);}
-#more3468 {background-image: url(http://cdn.myanimelist.net/images/manga/3/53493.jpg);}
+#more3468 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/2/203854.jpg);}
 #more3048 {background-image: url(http://cdn.myanimelist.net/images/manga/2/50745.jpg);}
 #more664 {background-image: url(http://cdn.myanimelist.net/images/manga/1/56997.jpg);}
 #more21479 {background-image: url(http://cdn.myanimelist.net/images/manga/1/34697.jpg);}
@@ -3799,7 +3799,7 @@ Manga Tumbnail
 #more10373 {background-image: url(http://cdn.myanimelist.net/images/manga/1/23637.jpg);}
 #more7576 {background-image: url(http://cdn.myanimelist.net/images/manga/3/95983.jpg);}
 #more10943 {background-image: url(http://cdn.myanimelist.net/images/manga/1/14742.jpg);}
-#more19922 {background-image: url(http://cdn.myanimelist.net/images/manga/4/38659.jpg);}
+#more19922 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/2/144447.jpg);}
 #more1015 {background-image: url(http://cdn.myanimelist.net/images/manga/1/48687.jpg);}
 #more17482 {background-image: url(http://cdn.myanimelist.net/images/manga/5/38348.jpg);}
 #more12371 {background-image: url(http://cdn.myanimelist.net/images/manga/2/62277.jpg);}
@@ -5640,7 +5640,7 @@ Manga Tumbnail
 #more4869 {background-image: url(http://cdn.myanimelist.net/images/manga/3/21135.jpg);}
 #more6200 {background-image: url(http://cdn.myanimelist.net/images/manga/3/7950.jpg);}
 #more9838 {background-image: url(http://cdn.myanimelist.net/images/manga/1/15816.jpg);}
-#more26566 {background-image: url(http://cdn.myanimelist.net/images/manga/1/66579.jpg);}
+#more26566 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/3/154153.jpg);}
 #more44743 {background-image: url(http://cdn.myanimelist.net/images/manga/3/79113.jpg);}
 #more5337 {background-image: url(http://cdn.myanimelist.net/images/manga/2/82728.jpg);}
 #more46298 {background-image: url(http://cdn.myanimelist.net/images/manga/3/81740.jpg);}
@@ -16795,7 +16795,7 @@ Manga Tumbnail
 #more32997 {background-image: url(http://cdn.myanimelist.net/images/manga/3/60361.jpg);}
 #more11238 {background-image: url(http://cdn.myanimelist.net/images/manga/2/15208.jpg);}
 #more39911 {background-image: url(http://cdn.myanimelist.net/images/manga/3/70577.jpg);}
-#more57063 {background-image: url(http://cdn.myanimelist.net/images/manga/3/99105.jpg);}
+#more57063 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/3/185251.jpg);}
 #more3818 {background-image: url(http://cdn.myanimelist.net/images/manga/3/4264.jpg);}
 #more9967 {background-image: url(http://cdn.myanimelist.net/images/manga/3/26311.jpg);}
 #more25839 {background-image: url(http://cdn.myanimelist.net/images/manga/3/41569.jpg);}
@@ -24961,7 +24961,7 @@ Manga Tumbnail
 #more74339 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/2/151905.webp);}
 #more73571 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/1/159136.webp);}
 #more62887 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/1/128447.jpg);}
-#more {background-image: url();}
+#more72583 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/2/125681.jpg);}
 #more {background-image: url();}
 #more {background-image: url();}
 #more {background-image: url();}
