--- a/Anime.css
+++ b/Anime.css
@@ -10632,7 +10632,7 @@ simple rule of add = #more {background-image: url();}
 #more33203 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/85350.jpg);}
 #more32948 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/79047.webp);}
 #more33743 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/83735l.jpg);}
-#more33012 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/79221.webp);}
+#more33012 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1319/92145.jpg);}
 #more32281 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/87048.jpg);}
 #more31798 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/78466.webp);}
 #more32937 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/82521.webp);}
@@ -10644,7 +10644,7 @@ simple rule of add = #more {background-image: url();}
 #more33487 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/80599.webp);}
 #more32698 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/83661.jpg);}
 #more33724 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/83109.webp);}
-#more33674 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/85939.jpg);}
+#more33674 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/86785.jpg);}
 #more32962 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/81186.webp);}
 #more34134 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/82141.webp);}
 #more34161 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/87759.jpg);}
@@ -10659,7 +10659,7 @@ simple rule of add = #more {background-image: url();}
 #more33036 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/82537.webp);}
 #more33018 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/87984.jpg);}
 #more34019 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/84461.jpg);}
-#more33352 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/89551.jpg);}
+#more33352 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1329/90618.jpg);}
 #more33161 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/84052.jpg);}
 #more34176 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/85224.jpg);}
 #more32901 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/86468.jpg);}
@@ -10702,9 +10702,9 @@ simple rule of add = #more {background-image: url();}
 #more32494 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/88507.jpg);}
 #more32902 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/80587.jpg);}
 #more32979 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/82292l.jpg);}
-#more34620 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/83540l.jpg);}
+#more34620 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/89784.jpg);}
 #more31500 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/80556.jpg);}
-#more34658 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/83611.jpg);}
+#more34658 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/89829.jpg);}
 #more34712 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/84718.jpg);}
 #more34933 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/86578.jpg);}
 #more33731 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/82590l.jpg);}
@@ -10731,7 +10731,7 @@ simple rule of add = #more {background-image: url();}
 #more35413 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/88472.jpg);}
 #more35203 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/86794.jpg);}
 #more34825 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/86644.jpg);}
-#more35760 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/86318.jpg);}
+#more35760 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1627/92098.jpg);}
 #more34902 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/86676.jpg);}
 #more35240 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/86768.jpg);}
 #more35932 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/86840.jpg);}
@@ -10742,19 +10742,19 @@ simple rule of add = #more {background-image: url();}
 #more35928 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1598/90817.jpg);}
 #more34280 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/86828.jpg);}
 #more36028 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/88518.jpg);}
-#more35889 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/89412.jpg);}
+#more35889 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1718/91097.jpg);}
 #more35868 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/86707.jpg);}
-#more35851 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/86653.jpg);}
-#more35905 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/88427.jpg);}
-#more35466 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/86773.jpg);}
+#more35851 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/89556.jpg);}
+#more35905 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/89979.jpg);}
+#more35466 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1566/91061.jpg);}
 #more35835 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/86627.jpg);}
 #more35062 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/88476.jpg);}
 #more35968 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/86933.jpg);}
 #more35790 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/87142.jpg);}
 #more36106 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/89417.jpg);}
-#more35589 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/86700.jpg);}
-#more35994 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/86986.jpg);}
-#more33889 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/87237.jpg);}
+#more35589 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1143/91358.jpg);}
+#more35994 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1786/91257.jpg);}
+#more33889 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1835/91306.jpg);}
 #more34662 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/86573.jpg);}
 #more34383 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/86667.jpg);}
 #more33095 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/82947.jpg);}
@@ -10765,40 +10765,40 @@ simple rule of add = #more {background-image: url();}
 #more36144 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/87620.jpg);}
 #more34542 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/88471.jpg);}
 #more35639 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/88234.jpg);}
-#more36098 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/87224.jpg);}
+#more36098 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/90070.jpg);}
 #more36027 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/88190.jpg);}
 #more36432 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/87911.jpg);}
 #more35076 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/87684.jpg);}
-#more36296 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/87685.jpg);}
+#more36296 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1943/91370.jpg);}
 #more35241 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/88431.jpg);}
 #more35484 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/88433.jpg);}
-#more36316 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/87724.jpg);}
-#more36474 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/88111.jpg);}
+#more36316 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1629/91971.jpg);}
+#more36474 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1841/91357.jpg);}
 #more36475 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/88110.jpg);}
 #more36407 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/87855.jpg);}
-#more36511 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/88169.jpg);}
+#more36511 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1840/92520.jpg);}
 #more35376 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/88215.jpg);}
 #more35788 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/86603.jpg);}
 #more36525 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1801/90264.jpg);}
 #more36220 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/88425.jpg);}
 #more34438 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/87709.jpg);}
 #more34439 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/87904.jpg);}
-#more36563 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/88376.jpg);}
+#more36563 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1427/91055.jpg);}
 #more34281 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/88545.jpg);}
 #more35000 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/87158.jpg);}
 #more36633 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/88526.jpg);}
-#more36548 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/88330.jpg);}
-#more36688 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/88680.jpg);}
+#more36548 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/89987.jpg);}
+#more36688 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1110/91029.jpg);}
 #more36397 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/88806.jpg);}
 #more36864 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/89182.jpg);}
 #more36726 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/88802.jpg);}
-#more35839 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/88906.jpg);}
+#more35839 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/89879.jpg);}
 #more36793 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1806/90190.jpg);}
-#more36652 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/88591.jpg);}
+#more36652 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1184/90334.jpg);}
 #more36038 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/87463.jpg);}
 #more35079 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/87235.jpg);}
 #more36882 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/89237.jpg);}
-#more36470 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/88837.jpg);}
+#more36470 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1446/91841.jpg);}
 #more31964 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/78745.jpg);}
 #more33486 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/85221.jpg);}
 #more35262 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/84951.jpg);}
@@ -10807,6 +10807,17 @@ simple rule of add = #more {background-image: url();}
 #more32323 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/78011.jpg);}
 #more35557 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/88293.jpg);}
 #more34451 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/88282.jpg);}
+#more37711 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1298/91812.jpg);}
+#more37377 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1455/91746.jpg);}
+#more37675 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1319/91709.jpg);}
+#more37492 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1197/92518.jpg);}
+#more37799 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1570/92100.jpg);}
+#more {background-image: url();}
+#more {background-image: url();}
+#more {background-image: url();}
+#more {background-image: url();}
+#more {background-image: url();}
+#more {background-image: url();}
 #more {background-image: url();}
 #more {background-image: url();}
 #more {background-image: url();}
