--- a/Anime.css
+++ b/Anime.css
@@ -395,7 +395,7 @@ simple rule of add = #more {background-image: url();}
 #more2402 {background-image: url(http://cdn.myanimelist.net/images/anime/5/64671.jpg);}
 #more387 {background-image: url(http://cdn.myanimelist.net/images/anime/9/13134.jpg);}
 #more66 {background-image: url(http://cdn.myanimelist.net/images/anime/1/66.jpg);}
-#more47 {background-image: url(http://cdn.myanimelist.net/images/anime/1/47.jpg);}
+#more47 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/8679.jpg);}
 #more22 {background-image: url(http://cdn.myanimelist.net/images/anime/6/21624.jpg);}
 #more15 {background-image: url(http://cdn.myanimelist.net/images/anime/4/24792.jpg);}
 #more24703 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/73642.jpg);}
@@ -852,7 +852,7 @@ simple rule of add = #more {background-image: url();}
 #more13203 {background-image: url(http://cdn.myanimelist.net/images/anime/3/41291.jpg);}
 #more13119 {background-image: url(http://cdn.myanimelist.net/images/anime/12/71796.jpg);}
 #more11433 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/59405.jpg);}
-#more10588 {background-image: url(http://cdn.myanimelist.net/images/anime/4/29107.jpg);}
+#more10588 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/29107.jpg);}
 #more10278 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/41085.jpg);}
 #more7661 {background-image: url(http://cdn.myanimelist.net/images/anime/13/30191.jpg);}
 #more7471 {background-image: url(http://cdn.myanimelist.net/images/anime/6/25397.jpg);}
@@ -1067,7 +1067,7 @@ simple rule of add = #more {background-image: url();}
 #more17269 {background-image: url(http://cdn.myanimelist.net/images/anime/5/62619.jpg);}
 #more15989 {background-image: url(http://cdn.myanimelist.net/images/anime/8/45084.jpg);}
 #more15583 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/44844.jpg);}
-#more13587 {background-image: url(http://cdn.myanimelist.net/images/anime/5/37787.jpg);}
+#more13587 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/37787.jpg);}
 #more10534 {background-image: url(http://cdn.myanimelist.net/images/anime/7/72436.jpg);}
 #more9786 {background-image: url(http://cdn.myanimelist.net/images/anime/13/27102.jpg);}
 #more8676 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/78699.jpg);}
@@ -1457,7 +1457,7 @@ simple rule of add = #more {background-image: url();}
 #more483 {background-image: url(http://cdn.myanimelist.net/images/anime/6/50277.jpg);}
 #more465 {background-image: url(http://cdn.myanimelist.net/images/anime/9/20927.jpg);}
 #more142 {background-image: url(http://cdn.myanimelist.net/images/anime/5/20389.jpg);}
-#more21681 {background-image: url(http://cdn.myanimelist.net/images/anime/10/64717.jpg);}
+#more21681 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1963/90831.jpg);}
 #more21435 {background-image: url(http://cdn.myanimelist.net/images/anime/10/56595.jpg);}
 #more20709 {background-image: url(http://cdn.myanimelist.net/images/anime/13/60207.jpg);}
 #more18229 {background-image: url(http://cdn.myanimelist.net/images/anime/7/52471.jpg);}
@@ -10669,7 +10669,7 @@ simple rule of add = #more {background-image: url();}
 #more30654 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/77966.webp);}
 #more31715 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/79375.webp);}
 #more31904 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/79757.webp);}
-#more33047 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/79299.webp);}
+#more33047 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1122/90836.jpg);}
 #more34100 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/82060.webp);}
 #more34437 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/82994.webp);}
 #more33253 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/81858.webp);}
@@ -10777,7 +10777,7 @@ simple rule of add = #more {background-image: url();}
 #more36475 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/88110.jpg);}
 #more36407 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/87855.jpg);}
 #more36511 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1840/92520.jpg);}
-#more35376 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/88215.jpg);}
+#more35376 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/89671.jpg);}
 #more35788 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/86603.jpg);}
 #more36525 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1801/90264.jpg);}
 #more36220 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/88425.jpg);}
@@ -10812,16 +10812,16 @@ simple rule of add = #more {background-image: url();}
 #more37675 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1319/91709.jpg);}
 #more37492 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1197/92518.jpg);}
 #more37799 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1570/92100.jpg);}
-#more {background-image: url();}
-#more {background-image: url();}
-#more {background-image: url();}
-#more {background-image: url();}
-#more {background-image: url();}
-#more {background-image: url();}
-#more {background-image: url();}
-#more {background-image: url();}
-#more {background-image: url();}
-#more {background-image: url();}
-#more {background-image: url();}
-#more {background-image: url();}
+#more34798 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/89877.jpg);}
+#more36023 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1797/91801.jpg);}
+#more36990 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1771/92198.jpg);}
+#more36616 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/89331.jpg);}
+#more35078 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/89984.jpg);}
+#more35997 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/90088.jpg);}
+#more36833 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/89062.jpg);}
+#more30736 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/85564.jpg);}
+#more34599 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1922/91900.jpg);}
+#more33489 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/83934.jpg);}
+#more35120 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/89973.jpg);}
+#more35330 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/88816.jpg);}
 #more {background-image: url();}
